# JobFlow-AI

./: .dockerignore  .gitignore  Aryan_Nishen_AgenticAi_Resume (1).docx  Dockerfile  Dockerfile.deploy  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  render.yaml  start.ps1  test_gaps.js
.github/workflows/: ci.yml
api/: auto_apply.py  background_scout.py  config.py  db.py  requirements.txt  server.py
docs/: agentic_ai_career_strategy.md
knowledge/: AryanNishen_Resume.md
src/job_scraper/: main.py  models.py  report_generator.py
src/job_scraper/graphs/: __init__.py  apply_recommendations.py  ats_gap_analysis.py  ats_scoring.py  error_handling.py  job_apis.py  job_discovery.py  llm_factory.py  resume_analysis.py  resume_enhancement.py  resume_templates.py  state.py  tools.py  tracing.py  user_matching.py
src/job_scraper/tools/: latex_resume_tool.py  resume_document_tool.py
tests/: conftest.py  test_resume_session.py  test_server.py
webapp/: Dockerfile  package-lock.json  package.json
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/analyze/: page.tsx
webapp/src/app/api/analyze/: route.ts
webapp/src/app/api/applications/: route.ts
webapp/src/app/api/apply-recommendations/: route.ts
webapp/src/app/api/ats-score/: route.ts
webapp/src/app/api/auto-apply/: route.ts
webapp/src/app/api/enhance/: route.ts
webapp/src/app/api/export-docx/: route.ts
webapp/src/app/api/health/: route.ts
webapp/src/app/api/jobs/: route.ts
webapp/src/app/api/test-flow/: route.ts
webapp/src/app/api/upload/: route.ts
webapp/src/app/jobs/: page.tsx
webapp/src/app/jobs/[id]/: page.tsx
webapp/src/app/studio/: page.tsx
webapp/src/app/tracker/: page.tsx
webapp/src/components/: ATSScoreGauge.tsx  AgentLogFeed.tsx  AnalysisAnimation.tsx  CommandCenter.tsx  DevConsole.tsx  JobCard.tsx  KanbanBoard.tsx  KeywordSuggestions.tsx  Navbar.tsx  ResumeComparison.tsx  ResumeDropzone.tsx  ResumeForm.tsx  ResumePreview.tsx  TemplatePicker.tsx
webapp/src/lib/: exportResume.ts  mongodb.ts
webapp/src/models/: Application.ts  Job.ts  Resume.ts
(+4 files in other folders)
